<resources>
    <string name="app_name">Interesta</string>
    <string name="interests">Interests</string>
    <string name="interesta">INTERESTA</string>
    <string name="your_interest_our_hope">YOUR INTEREST OUR HOPE</string>
    <string name="save">save</string>
    <string name="display">Display</string>
    <string name="enter_the_Interest_name">Enter_the_interest_name</string>
    <string name="addimage">addImage</string>
    <string name="add_contents">Add_contents</string>
    <string name="action_settings">Settings</string>
    <string name="spinner_title">Select Category</string>
    <string name="empty">empty</string>
    <string name="news">NEWS</string>
    <string name="videos">VIDEOS</string>
    <string name="tutorials">TUTORIALS</string>
    <string name="events">EVENTS</string>
    <string name="b1">Button</string>
    <string name="b2">Button</string>
    <string name="b3">Button</string>
    <string name="b4">Button</string>
    <string name="resources">Resources:</string>
    <string name="next">NEXT</string>
    <string name="add_contents_here">add contents here</string>
    <string name="welcome" />
</resources>
